# nilrag

./: .env.example  .env.sample  .gitignore  README.md  data.js  data.txt  local_demo.py  main.py  pyproject.toml  requirements.txt  secret_sharing.py
.github/workflows/: ci.yml
benchmarks/: nilrag_nildb_nodes.py  nilrag_quality.py  sum.py  test_rag.py
dev/bench/: data.js
examples/: 0.test_secretvaults.py  1.init_schema_query.py  2.data_owner_upload.py  3.client_query.py  4.server_nilrag.py  client_query.py  data_owner_init.py  data_owner_upload.py  launch_tee.py  nildb_config.json  nildb_config.sample.json  query_nildb_config.json  synthetic_data.py  uninitialized_nildb_config.json
examples/client/: query.py
examples/data/: 20-fake.txt  climate-change.txt  computer-science.txt
examples/data_owner/: flush.py  write.py
examples/init/: bootstrap.py  manual.py
nildb/nildb_launch/: get_schemas.py  post_tee_query.py  store_schema.py
nilrag/: app.py  nildb.py
nilrag/fe/: store_fe_information_script.py
nilrag/initialization/: initialize.py
scripts/: delete_all_schemas.py  delete_schema.py  init_chunk_query.py  init_differences_query.py  init_query.py  post_chunk_query_execute.py  post_data_delete.py  post_differences_query_execute.py  post_schema.py  post_store_data.py  post_tee_query_execute.py  store.py  upload_data.py
src/nilrag/: __init__.py  __main__.py  app.py  config.py  nildb.py  nildb_requests.py  rag_vault.py  util.py
src/nilrag/nildb/: initialization.py  operations.py  org_config.py
test/: rag.py  test_performance.py
(+7 files in other folders)
